# woningscout

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  alerting.py  base.py  config.py  features.py  ingestion.py  prediction.py  schemas.py  scoring.py
configs/: xgb_v3.yaml
data/fixtures/: sample_listings.json
monitoring/: prometheus.yml
monitoring/dashboards/: woningscout.json
monitoring/provisioning/: dashboards.yml
scripts/: init_db.sql
services/api/: Dockerfile  __main__.py  app.py
services/pipeline/: Dockerfile  __main__.py  orchestrator.py
tests/: conftest.py  test_alerting.py  test_api.py  test_features.py  test_ingestion.py  test_pipeline.py  test_prediction.py  test_schemas.py  test_scoring.py
